Cleaner db conn injection and server struct
